test/src/objects/invoice_statement__c.object
<CustomObject>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>invoice_value__c</fullName>
        <label>invoice value</label>
        <summarizedField>line_item__c.value__c</summarizedField>
        <summaryForeignKey>line_item__c.invoice_statement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>p__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>invoice statement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>invoice number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>invoice statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>